--- a/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
@@ -190,17 +190,32 @@
     <Compile Include="Models\C__RefactorLog.cs">
       <DependentUpon>OpiniometroModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Empadronado.cs">
+      <DependentUpon>OpiniometroModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Estudiante.cs">
+      <DependentUpon>OpiniometroModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Fecha_Corte.cs">
       <DependentUpon>OpiniometroModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Formulario.cs">
       <DependentUpon>OpiniometroModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Formulario_Respuesta.cs">
+      <DependentUpon>OpiniometroModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Imparte.cs">
+      <DependentUpon>OpiniometroModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Item.cs">
       <DependentUpon>OpiniometroModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Matricula.cs">
+      <DependentUpon>OpiniometroModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\OpiniometroModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -225,7 +240,13 @@
     <Compile Include="Models\Persona.cs">
       <DependentUpon>OpiniometroModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Posee_Enfasis_Perfil_Permiso.cs">
+      <DependentUpon>OpiniometroModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Profesor.cs">
+      <DependentUpon>OpiniometroModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Responde.cs">
       <DependentUpon>OpiniometroModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Seccion.cs">
@@ -303,36 +324,36 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Auth\Login.cshtml" />
     <Content Include="Views\Auth\Error.cshtml" />
-    <Content Include="Views\Item\Create.cshtml" />
-    <Content Include="Views\Item\Delete.cshtml" />
-    <Content Include="Views\Item\Details.cshtml" />
-    <Content Include="Views\Item\Edit.cshtml" />
-    <Content Include="Views\Item\Index.cshtml" />
-    <Content Include="Views\SeleccionUnica\Create.cshtml" />
-    <Content Include="Views\SeleccionUnica\Delete.cshtml" />
-    <Content Include="Views\SeleccionUnica\Details.cshtml" />
-    <Content Include="Views\SeleccionUnica\Edit.cshtml" />
-    <Content Include="Views\SeleccionUnica\Index.cshtml" />
-    <Content Include="Views\Texto_Libre\Create.cshtml" />
-    <Content Include="Views\Texto_Libre\Delete.cshtml" />
-    <Content Include="Views\Texto_Libre\Details.cshtml" />
-    <Content Include="Views\Texto_Libre\Edit.cshtml" />
-    <Content Include="Views\Texto_Libre\Index.cshtml" />
     <Content Include="Views\Formulario\Create.cshtml" />
     <Content Include="Views\Formulario\Delete.cshtml" />
     <Content Include="Views\Formulario\Details.cshtml" />
     <Content Include="Views\Formulario\Edit.cshtml" />
     <Content Include="Views\Formulario\Index.cshtml" />
+    <Content Include="Views\Item\Create.cshtml" />
+    <Content Include="Views\Item\Delete.cshtml" />
+    <Content Include="Views\Item\Details.cshtml" />
+    <Content Include="Views\Item\Edit.cshtml" />
+    <Content Include="Views\Item\Index.cshtml" />
     <Content Include="Views\Seccion\Create.cshtml" />
     <Content Include="Views\Seccion\Delete.cshtml" />
     <Content Include="Views\Seccion\Details.cshtml" />
     <Content Include="Views\Seccion\Edit.cshtml" />
     <Content Include="Views\Seccion\Index.cshtml" />
+    <Content Include="Views\SeleccionUnica\Create.cshtml" />
+    <Content Include="Views\SeleccionUnica\Delete.cshtml" />
+    <Content Include="Views\SeleccionUnica\Details.cshtml" />
+    <Content Include="Views\SeleccionUnica\Edit.cshtml" />
+    <Content Include="Views\SeleccionUnica\Index.cshtml" />
     <Content Include="Views\Conformado_Item_Sec_Form\Create.cshtml" />
     <Content Include="Views\Conformado_Item_Sec_Form\Delete.cshtml" />
     <Content Include="Views\Conformado_Item_Sec_Form\Details.cshtml" />
     <Content Include="Views\Conformado_Item_Sec_Form\Edit.cshtml" />
     <Content Include="Views\Conformado_Item_Sec_Form\Index.cshtml" />
+    <Content Include="Views\Texto_Libre\Create.cshtml" />
+    <Content Include="Views\Texto_Libre\Delete.cshtml" />
+    <Content Include="Views\Texto_Libre\Details.cshtml" />
+    <Content Include="Views\Texto_Libre\Edit.cshtml" />
+    <Content Include="Views\Texto_Libre\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
