--- a/Opiniometro_WebApp/Opiniometro_WebApp/Web.config
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="Opiniometro_DatosEntities" connectionString="metadata=res://*/Models.OpiniometroModel.csdl|res://*/Models.OpiniometroModel.ssdl|res://*/Models.OpiniometroModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Opiniometro_Datos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Opiniometro_DatosEntities1" connectionString="metadata=res://*/Models.OpiniometroModel.csdl|res://*/Models.OpiniometroModel.ssdl|res://*/Models.OpiniometroModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Opiniometro_Datos;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
