--- a/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
@@ -178,8 +178,8 @@
     <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Controllers\ItemsController.cs" />
-    <Compile Include="Controllers\Servicios\Permiso.cs" />
-    <Compile Include="Controllers\Servicios\PermisosUsuario.cs" />
+    <Compile Include="Controllers\Servicios\IdPermiso.cs" />
+    <Compile Include="Controllers\Servicios\IdentidadManager.cs" />
     <Compile Include="Controllers\RespondeController.cs" />
     <Compile Include="Controllers\LogInPerfilesController.cs" />
     <Compile Include="Controllers\SeccionController.cs" />
@@ -202,9 +202,6 @@
       <DependentUpon>OpiniometroModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Curso.cs">
-      <DependentUpon>OpiniometroModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\C__RefactorLog.cs">
       <DependentUpon>OpiniometroModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\DatosEstudiante_Result.cs">
@@ -287,6 +284,9 @@
       <DependentUpon>OpiniometroModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Seleccion_Unica.cs">
+      <DependentUpon>OpiniometroModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\SP_ObtenerPermisosUsuario_Result.cs">
       <DependentUpon>OpiniometroModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TelefonoPersona.cs">
