--- a/Opiniometro_WebApp/Opiniometro_WebAppTest/Opiniometro_WebAppTest.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebAppTest/Opiniometro_WebAppTest.csproj
@@ -135,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="Controllers\FormularioControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
